--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,8 +9,12 @@
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <h1>Hello Git!!!!</h1>
     <h2>This is my first git testing.</h2>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam laudantium excepturi odio tenetur modi magni
+        accusamus voluptatem sapiente earum nulla.</p>
 </body>
+
 </html>
