--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <h2>This is my first git testing.</h2>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam laudantium excepturi odio tenetur modi magni
         accusamus voluptatem sapiente earum nulla.</p>
+        <span>Welcome Git to GitHub</span>
 </body>
 
 </html>
